--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jay's Info Card</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Jay • Info Card</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="card">
-    <img src="profile.jpg" alt="Profile picture" class="profile-pic">
+  <section class="card">
+    <img class="avatar" src="profile.jpg" alt="Photo of Jay" />
     <h1>Jay Imperatori</h1>
-    <h2>Computer Engineering Major</h2>
-    <p><strong>Year:</strong> First-Year</p>
-    <p><strong>Passion:</strong> Making technology accessible for social good</p>
-    <p><strong>From:</strong> Atlanta, GA</p>
-  </div>
+    <p class="sub">Computer Engineering • Second-Year</p>
+
+    <ul class="facts">
+      <li><strong>Passion:</strong> Making STEM education more accessible</li>
+      <li><strong>From:</strong> Marietta, GA</li>
+    </ul>
+  </section>
 </body>
 </html>
